--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
+<%al = @analyzed_text%>
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%=@analyzed_text.count_of_words%></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%=@analyzed_text.count_of_vowels%></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%=al.count_of_consonants%></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%=al.most_used_letter.keys.first.upcase%>, used <%=al.most_used_letter.values.first%> times</h2>
